# aoc2025

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt  compile_commands.json  safeCracking.cpp  safeCracking.hpp  test_safeCracking.cpp
day1/src/: crackSafe.cpp  crackSafe.hpp  main.cpp  safeCracking.cpp  test_crackSafe.cpp  test_safeCracking.cpp
day1/tests/: test_crackSafe.cpp
day2/: CMakeLists.txt  notes.txt
day2/src/: addInvalidIDs.cpp  addInvalidIDs.hpp  main.cpp  sumInvalidIDs.cpp  sumInvalidIDs.hpp
day2/tests/: test_addInvalidIDs.cpp  test_sumInvalidIDs.cpp
day3/: CMakeLists.txt
day3/src/: main.cpp  maxJoltage.cpp  maxJoltage.hpp
day3/tests/: test_maxJoltage.cpp
day4/: CMakeLists.txt
day4/src/: main.cpp  totalAccessiblePaper.cpp  totalAccessiblePaper.hpp
day4/tests/: test_totalAccessiblePaper.cpp
day5/: CMakeLists.txt
day5/src/: main.cpp  totalFreshIngredients.cpp  totalFreshIngredients.hpp
day5/tests/: test_totalFreshIngredients.cpp
day6/: CMakeLists.txt
day6/src/: main.cpp  solveHomework.cpp  solveHomework.hpp
day6/tests/: test_solveHomework.cpp
day7/: CMakeLists.txt
day7/src/: main.cpp  splitBeams.cpp  splitBeams.hpp  totalTimelines.cpp  totalTimelines.hpp
day7/tests/: test_splitBeams.cpp  test_totalTimelines.cpp
day8/: CMakeLists.txt
day8/src/: largestCircuitsProduct.cpp  largestCircuitsProduct.hpp  main.cpp
day8/tests/: test_largestCircuitsProduct.cpp
day9/: CMakeLists.txt
day9/src/: largestSquareArea.cpp  largestSquareArea.hpp  main.cpp
day9/tests/: test_largestSquareArea.cpp
utils/: CMakeLists.txt
utils/include/utils/: fileUtils.hpp  stringUtils.hpp
utils/src/: algorithms.cpp  fileUtils.cpp  stringUtils.cpp
utils/tests/: test_fileUtils.cpp  test_stringUtils.cpp
